# expectest

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md
ci/: build-and-test.sh
examples/: empty.rs
src/: actual.rs  lib.rs
src/core/: actual.rs  failure.rs  join.rs  location.rs  matcher.rs  mod.rs  result.rs
src/matchers/: bool.rs  count.rs  empty.rs  equal.rs  floats.rs  mod.rs  option.rs  partial_eq.rs  partial_ord.rs  range.rs  result.rs
src/traits/: is_empty.rs  mod.rs
src/utils/: mod.rs
tests/: bool.rs  count.rs  empty.rs  floats.rs  macro.rs  option.rs  partial_eq.rs  partial_ord.rs  range.rs  result.rs
