[package]
name = "expectest"
version = "0.6.0"
authors = ["Aleksey Kuznetsov <zummenix@gmail.com>"]

description = "Crate provides matchers and matcher functions for unit testing."
repository = "https://github.com/zummenix/expectest"
readme = "README.md"
keywords = ["unit", "test", "matcher", "expect"]

license = "MIT OR Apache-2.0"

build = "build.rs"

[dependencies]
num-traits = "0.1.32"

[build-dependencies]
skeptic = "0.6.1"

[dev-dependencies]
skeptic = "0.6.1"

[features]
nightly = []

