[package]
name = "expectest"
version = "0.12.0"
authors = ["Aleksey Kuznetsov <zummenix@gmail.com>"]

description = "Crate provides matchers and matcher functions for unit testing."
repository = "https://github.com/zummenix/expectest"
documentation = "https://docs.rs/expectest"
readme = "README.md"
keywords = ["testing", "tests", "matcher", "expect"]
categories = ["development-tools::testing"]

license = "MIT OR Apache-2.0"

edition = "2018"

[badges]
travis-ci = { repository = "zummenix/expectest" }
maintenance = { status = "passively-maintained" }

[dependencies]
num-traits = "0.2"

[features]
nightly = []
